@@ -31,16 +31,16 @@ cd create/schema
 ./gen.pl c >../../include/dbsync.h
 cd -
 #export CFLAGS="-Wall -pedantic"
-#./configure --enable-agent --enable-server --with-libcurl --with-sqlite3 --with-net-snmp --prefix=`pwd` 2>>WARNINGS >/dev/null
-#./configure --enable-agent --enable-server --with-libcurl --with-pgsql --with-net-snmp --prefix=`pwd` 2>>WARNINGS >/dev/null
-./configure --enable-agent --enable-server --with-jabber --with-ldap --with-libcurl --with-mysql --with-net-snmp --prefix=`pwd` 2>>WARNINGS >/dev/null
-#./configure --enable-agent --enable-server --with-jabber --with-ldap --with-libcurl --with-sqlite3 --with-net-snmp --prefix=`pwd` 2>>WARNINGS >/dev/null
-echo Cleaning...
-make clean 2>>WARNINGS >/dev/null
-echo Making...
-make 2>>WARNINGS >/dev/null
-#echo Installing...
-make install 2>>WARNINGS >/dev/null
+
+for db in sqlite3 pgsql mysql; do
+	./configure --enable-agent --enable-server --with-jabber --with-ldap --with-libcurl --with-$db --with-net-snmp --prefix=`pwd` 2>>WARNINGS >/dev/null
+	echo Cleaning...
+	make clean 2>>WARNINGS >/dev/null
+	echo Making...
+	make 2>>WARNINGS >/dev/null
+	echo Installing...
+	make install 2>>WARNINGS >/dev/null
+done
 
 echo
 echo WARNINGS
